Unreleased:
    - ... [[Importance (1-3)]]

Version [Version number (e.g. 1.0)] - [Started Release Date]
    Subversion [Subversion number (e.g. 1.4)] - [Release Date] @ [Author]
        Added:
            - ...
        Changed:
            - ...
        Deprecated:
            - ...
        Removed:
            - ...
        Fixed:
            - ...


#Changelog

Unreleased General:

General:
    Added:
        - LICENSE - 16.08.2021   @ 737464
        - Changelog - 16.08.2021 @ 737464
        - Buildinfo - 16.08.2021 @ 737464
        - src - 16.08.2021       @ 737464
        - README.md - 16.08.2021 @ 737464
    Changed:
        - README.md - 17.08.2021 @ 737464
    Deprecated:
    Removed:



Unreleased:
    - Add file menu [2]
    - Add file tabs [1]
    - Fix flickering of text while scaling [3]
    - Add mouse scrolling [1]
    - Add file renaming [1]
    - Add selection tool [1]
    - Add extended ASCII support [1]
    - Change display system, line->char [1]
    - Add coding features [1]

Version 0.0 - 16.08.2021
    Subversion 0.9 - 16.08-2021 @ 737464
        Added:
            - main.cpp
            - definitions.hpp
            - fileIO.hpp
            - text.hpp
            - window.hpp
            - Makefile
        Changed:
        Deprecated:
        Removed:
        Fixed:

Version 1.0 - 17.08.2021
    Subversion 1.0 - 17.08.2021 @ 737464
        Added:
            - Cursor scrolling
            - 'SOL' and 'FN_DELETE' definition
            - Delete character after cursor
            - function to text.hpp
            - Possibility to show additional information
        Changed:
            - Text display function
        Deprecated:
        Removed:
        Fixed:
            - Cursor moving to wrong position
            - Tab handling issue
    Subversion 1.0.1 - 17.08-2021 @ 737464
        Added:
        Changed:
        Deprecated:
            - mouse position function
        Removed:
        Fixed:
            - mouse cursor position bug