@@ -39,7 +39,6 @@ Unreleased:
     - Add file tabs [1]
     - Fix flickering of text while scaling [3]
     - Add mouse scrolling [1]
-    - Add file renaming [1]
     - Add selection tool [1]
     - Add extended ASCII support [1]
     - Change display system, line->char [1]
@@ -78,7 +77,15 @@ Version 1.0 - 17.08.2021
         Added:
         Changed:
         Deprecated:
-            - mouse position function
+            - mouse input proccessing function
         Removed:
         Fixed:
             - mouse cursor position bug
+    Subversion 1.0.2 - 17.08.2021 @ 737464
+        Added:
+            - File renaming
+            - Definitions
+        Changed:
+            - Mouse input processing function
+        Removed:
+        Fixed:
